bug 682592: do bidi scan when nsTextFragment content is changed