content/base/src/nsTextFragmentSSE2.cpp
@@ -15,8 +15,8 @@ is_zero (__m128i x)
     _mm_movemask_epi8(_mm_cmpeq_epi8(x, _mm_setzero_si128())) == 0xffff;
 }
 
-PRBool
-Is8Bit(const PRUnichar *str, const PRUnichar *end)
+PRInt32
+FirstNon8Bit(const PRUnichar *str, const PRUnichar *end)
 {
   const PRUint32 numUnicharsPerVector = 8;
 
@@ -39,7 +39,7 @@ Is8Bit(const PRUnichar *str, const PRUnichar *end)
     NS_MIN(len, PRInt32(((-NS_PTR_TO_INT32(str)) & 0xf) / sizeof(PRUnichar)));
   for (; i < alignLen; i++) {
     if (str[i] > 255)
-      return PR_FALSE;
+      return i;
   }
 
   // Check one XMM register (16 bytes) at a time.
@@ -48,7 +48,7 @@ Is8Bit(const PRUnichar *str, const PRUnichar *end)
   for(; i < vectWalkEnd; i += numUnicharsPerVector) {
     const __m128i vect = *reinterpret_cast<const __m128i*>(str + i);
     if (!is_zero(_mm_and_si128(vect, vectmask)))
-      return PR_FALSE;
+      return i;
   }
 
   // Check one word at a time.
@@ -56,17 +56,17 @@ Is8Bit(const PRUnichar *str, const PRUnichar *end)
   for(; i < wordWalkEnd; i += numUnicharsPerWord) {
     const size_t word = *reinterpret_cast<const size_t*>(str + i);
     if (word & mask)
-      return PR_FALSE;
+      return i;
   }
 
   // Take care of the remainder one character at a time.
   for (; i < len; i++) {
     if (str[i] > 255) {
-      return PR_FALSE;
+      return i;
     }
   }
 
-  return PR_TRUE;
+  return -1;
 }
 
 } // namespace SSE2
